--- a/P008174.opf/meta.yml
+++ b/P008174.opf/meta.yml
@@ -1,7 +1,7 @@
-id: opecha:P008174
+id: P008174
 initial_creation_type: ocr
 source_metadata:
   id: bdr:W4CZ74207
   title: བཻ་ཌཱུརྱ་དཀར་པོ།
-  volume: ''
   author: ''
+  volumes: {}
