--- a/P008174.opf/meta.yml
+++ b/P008174.opf/meta.yml
@@ -4,4 +4,9 @@ source_metadata:
   id: bdr:W4CZ74207
   title: བཻ་ཌཱུརྱ་དཀར་པོ།
   author: ''
-  volumes: {}
+  volumes:
+    e685cc7495304036b37901bbdf366940:
+      image_group_id: I4CZ74285
+      title: ''
+      volume_number: 1
+      total_pages: 1278
