--- a/P008174.opf/layers/v001/Pagination.yml
+++ b/P008174.opf/layers/v001/Pagination.yml
@@ -1,5 +1,5 @@
 id: 595bf9a8cb3d4e6bb52af710621bd510
-annotation_type: pagination
+annotation_type: Pagination
 revision: '00001'
 annotations:
   30eb6e400996480e8bbdfa23a43c5dc4:
