--- a/P008174.opf/meta.yml
+++ b/P008174.opf/meta.yml
@@ -1,7 +1,7 @@
 id: P008174
 initial_creation_type: ocr
 created_at: 28/03/2020
-last_modified_at: 25/11/2021
+last_modified_at: 2021-12-17 13:06:03.678720
 source_metadata:
   id: bdr:W4CZ74207
   title: བཻ་ཌཱུརྱ་དཀར་པོ།
@@ -13,3 +13,5 @@ source_metadata:
       volume_number: 1
       total_pages: 1278
       base_file: v001.txt
+  access: http://purl.bdrc.io/admindata/AccessOpen
+  restrictedInChina: true
